--- a/ZwajApp-SPA/src/app/app.component.html
+++ b/ZwajApp-SPA/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="text-center">
+  <app-nav></app-nav>
   <h1>
     Welcome to {{ title }}!
   </h1>
